{{NEXT}}

- Avoid indirect calls
- Enforce strict and warnings in tes
- Update POD to reflect that -no-verbose shows SYNOPSIS
- Switch to GitHub and use Dist::Zilla

1.70 (marekr)
- CPAN#115847: pod2usage exits with error when using "-verbose 3" with STDIN
  Addressed in pod2usage script, and updated POD
- CPAN#122941: Pod::Usage::pod2usage() problem with $Config{scriptdir}
  Should be fixed by 1.69 already; reviewed code
- CPAN#121489: I<> not emphasized when used with Pod::Text::Termcap
  Added specific support of ::Termcap
- CPAN#114697: Sample code syntax error in documentation for Pod-Usage
  Fixed. Well spotted!
- CPAN#125337: Typo in pod
  Fixed. Well spotted, too!
- CPAN#130418: Fix parent directory in pod2usage auxiliary script
  Patch accepted, thanks!
- CPAN#131845: $Config{pager} string can have arguments
  fixed by changing the system() command from using the array form to
  string form, and escape/quote the file path to protect any metacharacters
  in the file path
- CPAN#131844: preferring PAGER to $Config{pager}
  Fixed with the above CPAN#131845

1.69 (marekr)
- CPAN#111313: Makefile creation issue with Pod-Usage-1.68
  thanks to H M Brand for the suggestion on how to create a more portable
  tar.gz distribution file
- CPAN#109830: Tests fail
  bundle some old Pod::Parser modules in the test so that there is no more
  dependency. This has to refactored one day to entirely get rid of that

1.68 (marekr)
- CPAN#102529: License declaration mismatch
  unified the license for Pod-Usage to "as Perl itself", and corrected authors
- CPAN#109830: Tests fail
  added prerequisite for Pod::Text 4.00 to avoid running tests with outdated
  Pod::Text
- CPAN#110443: [PATCH] fix -perldoc option in pod2usage() method
  added missing '-'
- CPAN#110446: [feature request] -perldocopt for supplying perldoc options
  added this option; split of string on whitespace is not optimal, but
  should do the job

1.67 (marekr)