@@ -4,7 +4,7 @@
       "Marek Rouchal <marekr@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.014, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.015, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -73,16 +73,27 @@
    "provides" : {
       "Pod::Usage" : {
          "file" : "lib/Pod/Usage.pm",
-         "version" : "1.70"
+         "version" : "2.00"
       }
    },
    "release_status" : "stable",
-   "version" : "1.70",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/Dual-Life/Pod-Usage/issues"
+      },
+      "homepage" : "https://github.com/Dual-Life/Pod-Usage",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/Dual-Life/Pod-Usage.git",
+         "web" : "https://github.com/Dual-Life/Pod-Usage"
+      }
+   },
+   "version" : "2.00",
    "x_contributors" : [
       "Nicolas R <nicolas@atoomic.org>"
    ],
-   "x_generated_by_perl" : "v5.30.1",
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.19",
+   "x_generated_by_perl" : "v5.26.1",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.02",
    "x_spdx_expression" : "Artistic-1.0-Perl OR GPL-1.0-or-later"
 }
 
